--- a/css/demo.css
+++ b/css/demo.css
@@ -1,7 +1,7 @@
 /* General Blueprint Style */
-@import url(http://fonts.googleapis.com/css?family=Lato:300,400,700);
+@import url<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">;
 @font-face {
-	font-family: 'bpicons';
+	font-family: 'Open Sans', sans-serif;
 	src:url('../fonts/bpicons/bpicons.eot');
 	src:url('../fonts/bpicons/bpicons.eot?#iefix') format('embedded-opentype'),
 		url('../fonts/bpicons/bpicons.woff') format('woff'),
